feat: Add global exception handler for HttpMessageNotReadableException and enhance TeamServiceTest with additional test cases